# node-addon-api

./: .directory  .eslintrc.js  .gitignore  .npmignore  .release-please-manifest.json  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  PREBUILD.md  README.md  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  appveyor.yml  binding.gyp  class_napi_1_1_array-members.html  class_napi_1_1_array.html  class_napi_1_1_array_buffer-members.html  class_napi_1_1_array_buffer.html  class_napi_1_1_async_worker-members.html  class_napi_1_1_async_worker.html  class_napi_1_1_boolean-members.html  class_napi_1_1_boolean.html  class_napi_1_1_buffer-members.html  class_napi_1_1_buffer.html  class_napi_1_1_callback_info-members.html  class_napi_1_1_callback_info.html  class_napi_1_1_class_property_descriptor-members.html  class_napi_1_1_class_property_descriptor.html  class_napi_1_1_env-members.html  class_napi_1_1_env.html  class_napi_1_1_error-members.html  class_napi_1_1_error.html  class_napi_1_1_escapable_handle_scope-members.html  class_napi_1_1_escapable_handle_scope.html  class_napi_1_1_external-members.html  class_napi_1_1_external.html  (+117 more)
doc/: Doxyfile  (+71 more)
test/: CMakeLists.txt  README.md  addon.cc  addon.js  addon_data.cc  addon_data.js  arrayOperations.cc  arrayOperations.js  array_buffer.cc  array_buffer.js  arraybuffer.cc  arraybuffer.js  asyncWorkerUnitTest.cc  asyncWorkerUnitTest.js  async_context.cc  async_context.js  async_progress_queue_worker.cc  async_progress_queue_worker.js  async_progress_worker.cc  async_progress_worker.js  async_worker.cc  async_worker.js  async_worker_nocallback.js  asynccontext.cc  asynccontext.js  asyncprogressqueueworker.cc  asyncprogressqueueworker.js  asyncprogressworker.cc  asyncprogressworker.js  asyncpromise.cc  asyncpromise.js  asyncworker-nocallback.js  asyncworker-persistent.cc  asyncworker-persistent.js  asyncworker.cc  asyncworker.js  bigint.cc  bigint.js  binding.cc  binding.gyp  (+102 more)
test/addon_build/: index.js
test/basic_types/: array.cc  array.js  boolean.cc  boolean.js  number.cc  number.js  string.cc  string.js  value.cc  value.js
test/common/: index.js  test_helper.h
test/dataview/: dataview.cc  dataview.js  dataview_read_write.cc  dataview_read_write.js
test/globalObject/: delete_property.cc  delete_property.js  get_property.cc  get_property.js  global_object_delete_property.cc  global_object_delete_property.js  global_object_get_property.cc  global_object_get_property.js  global_object_has_own_property.cc  global_object_has_own_property.js  global_object_set_property.cc  global_object_set_property.js  has_own_property.cc  has_own_property.js  object.cc  set_property.cc  set_property.js
test/maybe/: check.cc  index.js
test/object/: delete_property.cc  delete_property.js  finalizer.cc  finalizer.js  get_property.cc  get_property.js  has_own_property.cc  has_own_property.js  has_property.cc  has_property.js  object.cc  object.js  object_deprecated.cc  object_deprecated.js  object_freeze_seal.cc  object_freeze_seal.js  object_type_tag.cc  object_type_tag.js  set_property.cc  set_property.js  subscript_operator.cc  subscript_operator.js
test/require_basic_finalizers/: index.js
test/threadsafe_function/: threadsafe_function.cc  threadsafe_function.js  (+15 more)
(+174 files in other folders)
